--- a/french/gibi/Makefile
+++ b/french/gibi/Makefile
@@ -7,8 +7,8 @@
 
 PORTNAME=	gibi
 DISTVERSION=	2003-2
-DISTVERSIONSUFFIX=	.${ARCH}
-PORTREVISION=	4
+DISTVERSIONSUFFIX=	.i386
+PORTREVISION=	5
 CATEGORIES=	french cad linux
 MASTER_SITES=	http://www.code-aster.org/V2/UPLOAD/DOC/Telechargement/
 EXTRACT_SUFX=	.tar
