--- a/textproc/p5-podlators/Makefile
+++ b/textproc/p5-podlators/Makefile
@@ -9,6 +9,7 @@ PORTNAME=	podlators
 PORTVERSION=	2.0.6
 CATEGORIES=	textproc perl5
 MASTER_SITES=	CPAN
+MASTER_SITE_SUBDIR=	Pod
 PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	perl@FreeBSD.org
