--- a/japanese/font-mplus-ipa/Makefile
+++ b/japanese/font-mplus-ipa/Makefile
@@ -26,9 +26,7 @@ PKGDEINSTALL=	${WRKDIR}/pkg-install
 SUB_FILES=	pkg-install
 SUB_LIST=	X_FONTSDIR=${PREFIX}/${X_FONTSDIR}
 PLIST_SUB=	X_FONTSDIR=${X_FONTSDIR} \
-		FONTSDIR_EXTRA=${X_FONTSDIR}/fonts.dir.ipa \
-		LOCAL_FONTSDIR=${LOCAL_FONTSDIR} \
-		DATADIR=share/${PORTNAME}
+		LOCAL_FONTSDIR=${LOCAL_FONTSDIR}
 PORTDOCS=	Bitstream-COPYRIGHT.txt Mplus-LICENSE_E.txt \
 		Mplus-LICENSE_J.txt README.txt
 
