Remove unused variables.

--- a/japanese/font-sazanami/Makefile
+++ b/japanese/font-sazanami/Makefile
@@ -20,24 +20,17 @@ RUN_DEPENDS=	fc-cache:${PORTSDIR}/x11-fonts/fontconfig
 
 USE_BZIP2=	yes
 NO_BUILD=	yes
-
-MAKE_ENV=	FONTSDIR=${FONTSDIR}
-PLIST_SUB=	FONTSDIR=${FONTSDIR} \
-		LOCALFONTSDIR=${LOCALBASE}/${LOCALFONTSDIR}
-
 PKGINSTALL=	${WRKDIR}/pkg-install
 PKGDEINSTALL=	${WRKDIR}/pkg-install
 SUB_FILES=	pkg-install
 SUB_LIST=	X_FONTSDIR=${PREFIX}/${X_FONTSDIR}
 PLIST_SUB=	X_FONTSDIR=${X_FONTSDIR} \
-		LOCAL_FONTSDIR=${LOCAL_FONTSDIR} \
-		DATADIR=share/${PORTNAME}
+		LOCAL_FONTSDIR=${LOCAL_FONTSDIR}
+PORTDOCS=	README doc
 WRKSRC=		${WRKDIR}/sazanami-${PORTVERSION}
 
 LOCAL_FONTSDIR=	share/fonts
 X_FONTSDIR=	lib/X11/fonts
-
-PORTDOCS=	README doc
 
 do-install:
 	${MKDIR} ${DATADIR}
