--- a/audio/py-musicbrainz2/Makefile
+++ b/audio/py-musicbrainz2/Makefile
@@ -5,10 +5,12 @@
 # $FreeBSD$
 
 PORTNAME=	musicbrainz2
-PORTVERSION=	0.3.1
+PORTVERSION=	0.6.0
 CATEGORIES=	audio python
 MASTER_SITES=	ftp://ftp.musicbrainz.org/pub/musicbrainz/python-musicbrainz2/ \
-		http://zim.musicbrainz.org/~matt/
+		http://uk.musicbrainz.org/pub/musicbrainz/python-musicbrainz2/ \
+		http://users.musicbrainz.org/~matt/ \
+		http://ftp.osuosl.org/pub/musicbrainz/python-musicbrainz2/
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 DISTNAME=	python-musicbrainz2-${DISTVERSION}
 
@@ -17,10 +19,16 @@ COMMENT=	Next Generation Python bindings for MusicBrainz
 
 BUILD_DEPENDS=	${PYCTYPES}
 RUN_DEPENDS=	${PYCTYPES}
-LIB_DEPENDS=	musicbrainz.4:${PORTSDIR}/audio/libmusicbrainz
+LIB_DEPENDS=	discid.2:${PORTSDIR}/audio/libdiscid
 
 USE_PYTHON=	yes
 USE_PYDISTUTILS=	yes
 PYDISTUTILS_PKGNAME=	python-musicbrainz2
 
-.include <bsd.port.mk>
+.include <bsd.port.pre.mk>
+
+post-extract:
+	@${REINPLACE_CMD} -e 's|libdiscid.so.0|libdiscid.so.2|g' \
+		${WRKSRC}/src/musicbrainz2/disc.py
+
+.include <bsd.port.post.mk>
