Add Ume Font, another free Japanese TrueType font based on Sazanami and Wadalab font families.
WWW: http://sourceforge.jp/projects/ume-font/wiki/FrontPage

--- a/japanese/Makefile
+++ b/japanese/Makefile
@@ -375,6 +375,7 @@
     SUBDIR += uim-canna
     SUBDIR += uim-prime
     SUBDIR += uim-tomoe-gtk
+    SUBDIR += umefont
     SUBDIR += vera-fpw
     SUBDIR += vflib
     SUBDIR += vftool
