--- a/x11-themes/gnome-themes-extras/Makefile
+++ b/x11-themes/gnome-themes-extras/Makefile
@@ -8,6 +8,7 @@
 
 PORTNAME=	gnome-themes-extras
 PORTVERSION=	2.22.0
+PORTREVISION=	1
 CATEGORIES=	x11-themes gnome
 MASTER_SITES=	GNOME
 DIST_SUBDIR=	gnome2
