--- a/x11-wm/wmanager/files/pkg-message.in
+++ b/x11-wm/wmanager/files/pkg-message.in
@@ -1,4 +1,4 @@
-Documentation has been installed in /usr/local/share/doc/wmanager/ and
-example files in /usr/local/share/examples/wmanager/
+Documentation has been installed in %%DOCSDIR%%/ and
+example files in %%EXAMPLESDIR%%/
 You are advised to have a look at the sample .wmanagerrc
 and .xinitrc files available there.
