Add zfs-replicate 0.4, a ZFS Snapshot Replication Script.
PR:		ports/123982
Submitted by:	Jui-Nan Lin <jnlin at csie.nctu.edu.tw>

--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -820,6 +820,7 @@
     SUBDIR += xwlans
     SUBDIR += yawho
     SUBDIR += zeroer
+    SUBDIR += zfs-replicate
     SUBDIR += zidrav
     SUBDIR += zisofs-tools
 
