--- a/security/barnyard/files/barnyard.sh.in
+++ b/security/barnyard/files/barnyard.sh.in
@@ -12,22 +12,44 @@
 # barnyard_flags (str):		Extra flags passed to barnyard
 #				Default: -D
 # barnyard_conf (str):		Barnyard configuration file
-#				Default: ${PREFIX}/etc/barnyard.conf
+#				Default: %%PREFIX%%/etc/barnyard.conf
 #
+# Usage: barnyard [OPTIONS]...             (continual mode)
+#    or: barnyard -o [OPTIONS]... FILES... (batch mode)
+# Information Options:
+#   -h         Show this help information
+#   -?         Show this help information
+#   -V         Show version and exit
+#   -R         Display processed configuration and exit
+# General Configuration Options:
+#   -c <file>  Use configuration file <file>
+#   -d <dir>   Read spool files from <dir>
+#   -L <dir>   Write output files in <dir>
+#   -v         Increase the verbosity level by 1
+#   -s <file>  Read the sid-msg map from <file>
+#   -g <file>  Read the gen-msg map from <file>
+#   -p <file>  Read the classification map from <file>
+# Continual Processing Mode Options:
+#   -a <dir>   Archive processed files to <dir>
+#   -f <base>  Use <base> as the base unified filename
+#   -n         Only process new events
+#   -w <file>  Enable bookmarking using <file>
+#   -D         Run in daemon mode
+#   -X <file>  Use <file> as the pid file
+# Batch Processing Mode Options:
+#   -o         Enable batch processing mode
 
 . %%RC_SUBR%%
 
 name="barnyard"
+load_rc_config $name
 rcvar=`set_rcvar`
+# set some defaults
+: ${barnyard_enable="NO"}
+: ${barnyard_conf="%%PREFIX%%/etc/barnyard.conf"}
+: ${barnyard_flags="-D"}
 
 command="%%PREFIX%%/bin/barnyard"
-
-load_rc_config $name
-
-[ -z "$barnyard_enable" ]    && barnyard_enable="NO"
-[ -z "$barnyard_conf" ]      && barnyard_conf="%%PREFIX%%/etc/barnyard.conf"
-[ -z "$barnyard_flags" ]     && barnyard_flags="-D"
-
-[ -n "$barnyard_conf" ]      && barnyard_flags="$barnyard_flags -c $barnyard_conf"
+command_args="-c ${barnyard_conf} ${barnyard_flags}"
 
 run_rc_command "$1"
