--- a/security/barnyard/files/pkg-message.in
+++ b/security/barnyard/files/pkg-message.in
@@ -9,6 +9,7 @@ In order to enable barnyard to start on boot, you must edit /etc/rc.conf
 with the appropriate flags, etc.  See the FreeBSD Handbook for syntax:
 http://www.freebsd.org/doc/en_US.ISO8859-1/books/handbook/configtuning-rcng.html
 
-For the various options available, type % barnyard -h after install.
+For the various options available, type % barnyard -h after install or read
+the options in the startup script - in %%PREFIX%%/etc/rc.d.
 
 ************************************************************************
