[MAINTAINER] japanese/latex-japanese: change portname to platex-japanese
	This port can be only usable with platex not with latex.
	To eliminate ambiguity which may lead users to try this
	package with genuine latex, it's be better change the prefix
	of portname to "platex-" instead of "latex-".

PR:		ports/123626
Submitted by:	Koji Yokota <yokota@res.otaru-uc.ac.jp>

--- a/japanese/Makefile
+++ b/japanese/Makefile
@@ -166,7 +166,6 @@
     SUBDIR += kterm
     SUBDIR += kterm16c
     SUBDIR += lambdamoo
-    SUBDIR += latex-japanese
     SUBDIR += latex2html
     SUBDIR += leafrogue
     SUBDIR += less
@@ -275,6 +274,7 @@
     SUBDIR += php_doc
     SUBDIR += plain2
     SUBDIR += plan
+    SUBDIR += platex-japanese
     SUBDIR += platex-jsclasses
     SUBDIR += platex-otf
     SUBDIR += platex209
