[new port] devel/cvs-devel 1.12.13_8
	Latest upstream/feature release, similar to Debian, see the
	ChangeLog excerpts available at
	http://cto.homelinux.net/usr/ports/devel/cvs-devel/ChangeLog page.

	This feature release/version, I think, would be quite useful
	for all those users who want to share and, or transfer their
	existing CVS repositories from Linux to FreeBSD machines.

PR:		ports/118033
Submitted by:	Balwinder S Dheeman <bdheeman@gmail.com>

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -202,6 +202,7 @@
     SUBDIR += cut
     SUBDIR += cutils
     SUBDIR += cvs+ipv6
+    SUBDIR += cvs-devel
     SUBDIR += cvs-syncmail
     SUBDIR += cvs2cl
     SUBDIR += cvs2darcs
