Update to version 4.0.
Also fixes to pkg-plist to 1) forget to chmod/chown db directory for
package and 2) shut-up error message to remove ${PREFIX}/share/locale/rw
(that is not listed in BSD.local.dist, and other applications such as bison
may be used this directory.)

jwhois.conf is also updated to the latest revision (1.137) from jwhois
CVS repository.

Pressure for update from:	nork

--- a/net/jwhois/files/jwhois.conf
+++ b/net/jwhois/files/jwhois.conf
@@ -23,6 +23,7 @@ whois-servers {
 	# of regular expressions.  See below for the definition of cidr-blocks.
 	#
 	"\\([0-9]+\\.\\)+[0-9]+" = "struct cidr-blocks";
+	"^[0-9A-Fa-f]+:[0-9A-Fa-f:.]*\\(/[0-9]+\\)?$" = "struct cidr6-blocks";
 	"^CORE-[0-9]+$" = "struct handles";
 	"^CO[CH]O-[0-9]+$" = "struct handles";
 	".*-[A-Z]+$" = "struct handles";
@@ -58,45 +59,6 @@ whois-servers {
 	# Japanese NIC handles
 	#
 	"^[A-Z]+[0-9]+JP$" = "whois.nic.ad.jp";
- 
-	#
-	# Sub-TLA Assignments
-	# see http://www.iana.org/assignments/ipv6-tla-assignments
-	#
-	"^2001:0?[01][A-F0-9][A-F0-9]:.+" = "whois.iana.org";
-	"^2001:0?[23][A-F0-9][A-F0-9]:.+" = "whois.apnic.net";
-	"^2001:0?[45][A-F0-9][A-F0-9]:.+" = "whois.arin.net";
-	"^2001:0?[67][A-F0-9][A-F0-9]:.+" = "whois.ripe.net";
-	"^2001:0?[89][A-F0-9][A-F0-9]:.+" = "whois.ripe.net";
-	"^2001:0?[AB][A-F0-9][A-F0-9]:.+" = "whois.ripe.net";
-	"^2001:0?[CD][A-F0-9][A-F0-9]:.+" = "whois.apnic.net";
-	"^2001:0?[EF][A-F0-9][A-F0-9]:.+" = "whois.apnic.net";
-	"^2001:1[23][A-F0-9][A-F0-9]:.+" = "whois.lacnic.net";
-	"^2001:1[45][A-F0-9][A-F0-9]:.+" = "whois.ripe.net";
-	"^2001:1[67][A-F0-9][A-F0-9]:.+" = "whois.ripe.net";
-	"^2001:1[89][A-F0-9][A-F0-9]:.+" = "whois.arin.net";
-	"^2001:1[AB][A-F0-9][A-F0-9]:.+" = "whois.ripe.net";
-	"^2001:1[CD][A-F0-9][A-F0-9]:.+" = "whois.ripe.net";
-	"^2001:1[EF][A-F0-9][A-F0-9]:.+" = "whois.ripe.net";
-	"^2001:2[A-F0-9][A-F0-9][A-F0-9]:.+" = "whois.ripe.net";
-	"^2001:3[A-B0-9][A-F0-9][A-F0-9]:.+" = "whois.ripe.net";
-	"^2001:4[01][A-F0-9][A-F0-9]:.+" = "whois.ripe.net";
-	"^2001:4[23][A-F0-9][A-F0-9]:.+" = "whois.arin.net";
-	"^2001:4[45][A-F0-9][A-F0-9]:.+" = "whois.apnic.net";
-	"^2001:4[67][A-F0-9][A-F0-9]:.+" = "whois.ripe.net";
-	"^2001:4[89][A-F0-9][A-F0-9]:.+" = "whois.arin.net";
-	"^2001:4[AB][A-F0-9][A-F0-9]:.+" = "whois.ripe.net";
-	"^2001:4[CD][A-F0-9][A-F0-9]:.+" = "whois.ripe.net";
-	# ...
-	"^2001:5[A-F0-9][A-F0-9][A-F0-9]:.+" = "whois.ripe.net";
-	# ...
-	"^2001:[89A][A-F0-9][A-F0-9][A-F0-9]:.+" = "whois.apnic.net";
-
-	#
-	# Historical IPv6 catch-all
-	#
-	".*:.*" = "whois.6bone.net";
-
 	#
 	# If your host and network supports it, you can also specify IPv6
 	# addresses in the server field.
@@ -110,6 +72,10 @@ whois-servers {
         # for which whois server to use for each domain query.
 	#
 	# default = "whois-servers";
+
+	#
+	# Sub-TLA Assignments
+	#
 
 	#
 	# Pseudo-ccTLDs must be listed above gTLDs
@@ -141,6 +107,7 @@ whois-servers {
 	"\\.ac$" = "whois.nic.ac";
 	"\\.ae$" = "whois.uaenic.ae";
 	"\\.aero$" = "whois.aero";
+	"\\.af$" = "whois.nic.af";
 	"\\.ag$" = "whois.nic.ag";
 	"\\.ai$" = "whois.offshore.ai";
 	"\\.al$" = "whois.ripe.net";
@@ -157,9 +124,10 @@ whois-servers {
 	"\\.az$" = "whois.ripe.net";
 	"\\.ba$" = "whois.ripe.net";
 	"\\.be$" = "whois.dns.be";
-	"\\.bg$" = "whois.digsys.bg";
+	"\\.bg$" = "whois.register.bg";
 	"\\.bi$" = "www.nic.bi";
 	"\\.biz$" = "whois.neulevel.biz";
+	"\\.bj$" = "whois.nic.bj";
 	"\\.bm$" = "rwhois.ibl.bm 4321";
 	"\\.br$" = "whois.nic.br";
 	"\\.bv$" = "whois.ripe.net";
@@ -171,6 +139,7 @@ whois-servers {
 	"\\.cd$" = "whois.nic.cd";
 	"\\.cg$" = "www.nic.cg";
 	"\\.ch$" = "whois.nic.ch";
+	"\\.ci$" = "whois.nic.ci";
 	"\\.ck$" = "whois.nic.ck";
 	"\\.cl$" = "whois.nic.cl";
 	"\\.edu\\.cn$" = "whois.edu.cn";
@@ -183,8 +152,12 @@ whois-servers {
 	"\\.cx$" = "whois.nic.cx";
 	"\\.cy$" = "whois.ripe.net";
 	"\\.cz$" = "whois.nic.cz";
-	"\\.de$" = "whois.denic.de";
+	"\\.de$" {
+		whois-server = "whois.denic.de";
+		query-format = "-C UTF-8 -T dn,ace $*";
+	}
 	"\\.dk$" = "whois.dk-hostmaster.dk";
+	"\\.dm$" = "whois.nic.dm";
 	"\\.do$" = "whois.nic.do";
 	"\\.dz$" = "whois.ripe.net";
 	"\\.ec$" = "www.nic.ec";
@@ -202,8 +175,9 @@ whois-servers {
 	"\\.gov$" = "whois.nic.gov";
 	"\\.gg$" = "whois.isles.net";
 	"\\.gm$" = "whois.ripe.net";
+	"\\.gp$" = "whois.nic.gp";
 	"\\.gr$" = "whois.ripe.net";
-	"\\.gs$" = "whois.adamsnames.tc";
+	"\\.gs$" = "203.119.12.22";
 	"\\.gt$" = "www.gt";
 	"\\.hk$" = "whois.hkdnr.net.hk";
 	"\\.hm$" = "whois.registry.hm";
@@ -217,7 +191,7 @@ whois-servers {
 	"\\.int$" = "whois.iana.org";
 	"\\.io$" = "www.io.io";
 	"\\.ir$" = "whois.nic.ir";
-	"\\.im$" = "www.nic.im";
+	"\\.im$" = "whois.nic.im";
 	"\\.is$" = "whois.isnic.is";
 	"\\.it$" = "whois.nic.it";
 	"\\.je$" = "whois.isles.net";
@@ -226,6 +200,7 @@ whois-servers {
 		query-format = "$* /e";
 	}
 	"\\.kg$" = "whois.domain.kg";
+	"\\.ki$" = "whois.nic.ki";
 	"\\.kr$" = "whois.krnic.net";
 	"\\.kz$" = "whois.nic.kz";
 	"\\.la$" = "whois.nic.la";
@@ -235,12 +210,15 @@ whois-servers {
 	"\\.lt$" = "whois.domreg.lt";
 	"\\.lu$" = "whois.dns.lu";
 	"\\.lv$" = "whois.nic.lv";
+	"\\.ly$" = "whois.nic.ly";
 	"\\.ma$" = "whois.ripe.net";
 	"\\.mil$" = "whois.nic.mil";
 	"\\.mk$" = "whois.ripe.net";
 	"\\.mm$" = "whois.nic.mm";
+	"\\.mobi$" = "whois.dotmobiregistry.net";
 	"\\.ms$" = "whois.adamsnames.tc";
 	"\\.mt$" = "www.um.edu.mt";
+	"\\.mu$" = "whois.nic.mu";
 	"\\.museum$" = "whois.museum";
 	"\\.mw$" = "www.tarsus.net";
 	"\\.mx$" = "whois.nic.mx";
@@ -260,14 +238,16 @@ whois-servers {
 	"\\.pe$" = "whois.nic.pe";
 	"\\.pk$" = "pknic.net.pk";
 	"\\.pl$" = "whois.dns.pl";
+	"\\.pm$" = "whois.nic.pm";
 	"\\.pro$" = "whois.registrypro.pro";
 	"\\.pt$" = "whois.dns.pt";
 	"\\.pw$" = "whois.nic.pw";
+	"\\.re$" = "whois.nic.re";
 	"\\.ro$" = "whois.rotld.ro";
 	"\\.ru$" = "whois.ripn.net";
 	"\\.rw$" = "www.nic.rw";
 	"\\.sa$" = "saudinic.net.sa";
-	"\\.se$" = "www.nic-se.se"; # "whois.nic-se.se";
+	"\\.se$" = "whois.iis.se";
 	"\\.sg$" = "whois.nic.net.sg";
 	"\\.sh$" = "whois.nic.sh";
 	"\\.si$" = "whois.arnes.si";
@@ -278,17 +258,18 @@ whois-servers {
 	"\\.st$" = "whois.nic.st";
 	"\\.su$" = "whois.ripn.net";
 	"\\.tc$" = "whois.adamsnames.tc";
-	"\\.tf$" = "whois.adamsnames.tc";
+	"\\.tf$" = "whois.afnic.fr";
 	"\\.tg$" = "www.nic.tg";
 	"\\.th$" = "whois.thnic.net";
 	"\\.tj$" = "whois.nic.tj";
 	"\\.tk$" = "whois.dot.tk";
+	"\\.tl$" = "whois.nic.tl";
 	"\\.tm$" = "whois.nic.tm";
 	"\\.tn$" = "whois.ripe.net";
 	"\\.to$" = "whois.tonic.to";
-	"\\.tr$" = "whois.metu.edu.tr";
+	"\\.tr$" = "whois.nic.tr";
 	"\\.tt$" = "www.nic.tt";
-	"\\.tv$" = "whois.tv";
+	"\\.tv$" = "whois.nic.tv";
 	"\\.tw$" = "whois.twnic.net";
 	"\\.ua$" = "whois.com.ua";
 	"\\.ug$" = "whois.co.ug";
@@ -301,12 +282,14 @@ whois-servers {
 	"\\.uy$" = "www.rau.edu.uy"; # is a whois server
 	"\\.uz$" = "www.noc.uz";
 	"\\.va$" = "whois.ripe.net";
-	"\\.ve$" = "rwhois.nic.ve 4321";
+	"\\.ve$" = "whois.nic.ve";
 	"\\.vi$" = "www.nic.vi";
 	"\\.vg$" = "whois.adamsnames.tc";
 	"\\.vn$" = "www.vnnic.net.vn";
 	"\\.vu$" = "www.vunic.vu";
+	"\\.wf$" = "whois.nic.wf";
 	"\\.ws$" = "whois.worldsite.ws";
+	"\\.yt$" = "whois.nic.yt";
 	"\\.yu$" = "whois.ripe.net";
 	"\\.ac\\.za$" = "whois.ac.za";
 	"\\.org\\.za$" = "rwhois.org.za 4321";
@@ -416,6 +399,7 @@ cidr-blocks {
 
 	"24.132.0.0/16" = "whois.ripe.net";
 	"24.232.0.0/16" = "whois.lacnic.net";
+        "41.0.0.0/8" = "whois.afrinic.net"; 
 	"43.0.0.0/8" = "whois.v6nic.net";
 	"58.0.0.0/8" = "whois.apnic.net";
 	"59.0.0.0/8" = "whois.apnic.net";
@@ -428,6 +412,10 @@ cidr-blocks {
 	"81.91.224.0/20" = "whois.afrinic.net";
 	"81.192.0.0/16" = "whois.afrinic.net";
 	"81.0.0.0/8" = "whois.ripe.net";
+	"82.101.128.0/18" = "whois.afrinic.net";
+        "82.201.128.0/17" = "whois.afrinic.net";
+        "82.201.160.0/19" = "whois.afrinic.net";
+        "82.201.224.0/19" = "whois.afrinic.net"; 
 	"82.0.0.0/8" = "whois.ripe.net";
 	"83.0.0.0/8" = "whois.ripe.net";
 	"84.36.0.0/17" = "whois.afrinic.net";
@@ -436,6 +424,15 @@ cidr-blocks {
 	"86.0.0.0/8" = "whois.ripe.net";
 	"87.0.0.0/8" = "whois.ripe.net";
 	"88.0.0.0/8" = "whois.ripe.net";
+        "89.0.0.0/8" = "whois.ripe.net";
+        "90.0.0.0/8" = "whois.ripe.net";
+        "91.0.0.0/8" = "whois.ripe.net"; 
+        "121.0.0.0/8" = "whois.apnic.net";
+        "122.0.0.0/8" = "whois.apnic.net";
+        "123.0.0.0/8" = "whois.apnic.net";
+        "124.0.0.0/8" = "whois.apnic.net";
+        "125.0.0.0/8" = "whois.apnic.net";
+        "126.0.0.0/8" = "whois.apnic.net"; 
 	"129.132.0.0/16" = "whois.ripe.net";
 	"129.177.0.0/16" = "whois.ripe.net";
 	"129.187.0.0/16" = "whois.ripe.net";
@@ -522,6 +519,9 @@ cidr-blocks {
 	"169.208.0.0/16" = "whois.apnic.net";
 	"171.16.0.0/12" = "whois.ripe.net";
 	"171.32.0.0/15" = "whois.ripe.net";
+        "189.0.0.0/8" = "whois.lacnic.net";
+        "190.0.0.0/8" = "whois.lacnic.net";
+        "196.0.0.0/8" = "whois.afrinic.net"; 
 	"192.16.192.0/24" = "whois.ripe.net";
 	"192.114.0.0/15" = "whois.ripe.net";
 	"192.116.0.0/15" = "whois.ripe.net";
@@ -546,8 +546,8 @@ cidr-blocks {
 	"192.164.0.0/16" = "whois.ripe.net";
 	"193.0.0.0/8" = "whois.ripe.net";
 	"194.0.0.0/8" = "whois.ripe.net";
-	"195.0.0.0/8" = "whois.ripe.net";
 	"195.166.224.0/19" = "whois.afrinic.net";
+	"195.0.0.0/8" = "whois.ripe.net";
 	"196.2.96.0/19" = "whois.afrinic.net";
 	"196.2.128.0/17" = "whois.afrinic.net";
 	"196.200.0.0/13" = "whois.afrinic.net";
@@ -572,6 +572,67 @@ cidr-blocks {
 	"222.0.0.0/8" = "whois.apnic.net";
 
 	default = "whois.arin.net";
+}
+
+#
+# See http://www.iana.org/assignments/ipv6-unicast-address-assignments
+#
+cidr6-blocks {
+	type = cidr6;
+
+	"2001:0000::/23" = "whois.iana.org";
+	"2001:0200::/23" = "whois.apnic.net";
+	"2001:0400::/23" = "whois.arin.net";
+	"2001:0600::/23" = "whois.ripe.net";
+	"2001:0800::/23" = "whois.ripe.net";
+	"2001:0A00::/23" = "whois.ripe.net";
+	"2001:0C00::/23" = "whois.apnic.net";
+	"2001:0E00::/23" = "whois.apnic.net";
+	"2001:1200::/23" = "whois.lacnic.net";
+	"2001:1400::/23" = "whois.ripe.net";
+	"2001:1600::/23" = "whois.ripe.net";
+	"2001:1800::/23" = "whois.arin.net";
+	"2001:1A00::/23" = "whois.ripe.net";
+	"2001:1C00::/23" = "whois.ripe.net";
+	"2001:1E00::/23" = "whois.ripe.net";
+	"2001:2000::/20" = "whois.ripe.net";
+	"2001:3000::/21" = "whois.ripe.net";
+	"2001:3800::/22" = "whois.ripe.net";
+	"2001:4000::/23" = "whois.ripe.net";
+	"2001:4200::/23" = "whois.arin.net";
+	"2001:4400::/23" = "whois.apnic.net";
+	"2001:4600::/23" = "whois.ripe.net";
+	"2001:4800::/23" = "whois.arin.net";
+	"2001:4A00::/23" = "whois.ripe.net";
+	"2001:4C00::/23" = "whois.ripe.net";
+	"2001:5000::/20" = "whois.ripe.net";
+	"2001:8000::/19" = "whois.apnic.net";
+	"2001:A000::/20" = "whois.apnic.net";
+	"2001:B000::/20" = "whois.apnic.net";
+
+	"2003:0000::/18" = "whois.ripe.net";
+
+	"2400:0000::/19" = "whois.apnic.net";
+	"2400:2000::/19" = "whois.apnic.net";
+	"2400:4000::/21" = "whois.apnic.net";
+	"2404:0000::/23" = "whois.apnic.net";
+
+	"2600:0000::/22" = "whois.arin.net";
+	"2604:0000::/22" = "whois.arin.net";
+	"2608:0000::/22" = "whois.arin.net";
+	"260C:0000::/22" = "whois.arin.net";
+	"2610:0000::/23" = "whois.arin.net";
+
+	"2800:0000::/23" = "whois.lacnic.net";
+
+	"2A00:0000::/21" = "whois.ripe.net";
+	"2A01:0000::/16" = "whois.ripe.net";
+
+	#
+	# Experimental IPv6 network 6bone (RFC2471)
+	# Phaseout at Jun, 6 2006 (RFC3701)
+	#
+	"3FFE::/16" = "whois.6bone.net";
 }
 
 #
@@ -676,13 +737,6 @@ server-options {
 		http-method = "GET";
 		http-action = "/cgi-bin/whois.sh";
 		form-element = "Domain";			# <input> element
-	}
-
-	"www\\.nic-se\\.se" {
-		http = "true";
-		http-method = "GET";
-		http-action = "/cgi-bin/whois/www-to-whois";
-		form-element = "domain";
 	}
 
 	"www\\.nic\\.es" {
@@ -790,7 +844,7 @@ server-options {
 	"pknic\\.net\\.pk" {
 		http = "true";
 		http-method = "POST";
-		http-action = ":443/cgi-bin/pknic-db/display.html";
+		http-action = "/cgi-bin/pknic-db/display.html";
 		form-element = "name";
 	}
 
@@ -849,13 +903,6 @@ server-options {
 		whois-redirect = ".* \\([Rr]+[Ww][Hh][Oo][Ii][Ss]\\.[A-Za-z]*\\.[Nn][Ee][Tt]\\) port \\([0-9]*\\)";
 	}
 
-	"www\\.nic\\.im" {
-		http = "true";
-		http-method = "GET";
-		http-action = "/scripts/imreg/domenq.asp";
-		form-element = "domain";
-	}
-
 	"www\\.nic\\.ar" {
 		http = "true";
 		http-method = "POST";
@@ -873,14 +920,30 @@ server-options {
 	"whois\\.denic\\.de" {
 		whois-server = "whois.denic.de";
 		query-format = "-C UTF-8 -T dn,ace $*";
+		answer-charset = "UTF-8";
 	}
 	"whois\\.nic\\.ad\\.jp" {
 		query-format = "$*/e";
+	}
+	"whois\\.nic\\.ch" {
+		answer-charset = "UTF-8";
+	}
+	"whois\\.nic\\.li" {
+		answer-charset = "UTF-8";
+	}
+	"whois\\.centralnic\\.*" {
+                whois-redirect = ".*Whois Server: \\(.*\\)";
+        }
+	".*\\.verisign-grs\\.com" {
+		whois-redirect = ".*Whois Server: \\(.*\\)";
 	}
 }
 
 #
 # The cache feature is used to provide a local cache with Whois information.
+# Note that the cache feature might have been disabled at compile time and
+# thus not be available on this system.
+#
 # By default, the location of the database is /usr/local/var/jwhois.db and the
 # default expire time is 7 days, but you can change those below.
 #
