--- a/net/jwhois/Makefile
+++ b/net/jwhois/Makefile
@@ -6,8 +6,8 @@
 #
 
 PORTNAME=	jwhois
-PORTVERSION=	3.2.3
-PORTREVISION=	3
+PORTVERSION=	4.0
+#PORTREVISION=	0
 CATEGORIES=	net
 MASTER_SITES=	${MASTER_SITE_GNU}
 MASTER_SITE_SUBDIR=	jwhois
