--- a/devel/p5-Devel-Messenger/Makefile
+++ b/devel/p5-Devel-Messenger/Makefile
@@ -6,12 +6,12 @@
 #
 
 PORTNAME=	Devel-Messenger
-PORTVERSION=	0.01
+PORTVERSION=	0.02
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
-MAINTAINER=	gslin@gslin.org
+MAINTAINER=	perl@FreeBSD.org
 COMMENT=	Let Your Code Talk to You
 
 PERL_CONFIGURE=	yes
