--- a/benchmarks/postal/files/patch-Makefile.in
+++ b/benchmarks/postal/files/patch-Makefile.in
@@ -1,11 +1,13 @@
---- Makefile.in.orig	Fri Mar  2 14:08:50 2007
-+++ Makefile.in	Fri Mar  2 14:08:43 2007
-@@ -16,7 +16,7 @@
+--- Makefile.in.orig	2008-05-26 11:14:18.000000000 +0200
++++ Makefile.in	2008-05-26 11:14:01.000000000 +0200
+@@ -17,8 +17,8 @@
  
  TESTEXE=ex-test
  BASEOBJS=userlist.o thread.o results.o address.o tcp.o cmd5.o mutex.o logit.o expand.o @extra_objs@
 -LFLAGS=-lstdc++ @extra_ldflags@
+-CRYPTLFLAGS=-lstdc++ @crypt_ldflags@
 +LFLAGS=$(LDFLAGS) -lstdc++ @extra_ldflags@
++CRYPTLFLAGS=$(LDFLAGS) -lstdc++ @crypt_ldflags@
  
  
  ALLOBJS=$(BASEOBJS) smtp.o client.o basictcp.o bhmusers.o smtpserver.o
